--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
   "devDependencies": {
     "@appliedblockchain/eslint-config": "2.6.0",
     "eslint": "6.8.0",
-    "flow-bin": "0.115.0",
-    "jest": "24.9.0"
+    "flow-bin": "0.120.1",
+    "jest": "25.1.0"
   },
   "eslintConfig": {
     "extends": "@appliedblockchain",
     "rules": {
       "no-empty": 0,
-      "no-param-reassign": [ 2, { "props": true } ]
+      "no-param-reassign": [
+        2,
+        {
+          "props": true
+        }
+      ]
     }
   },
   "eslintIgnore": [
