--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Monadic parser combinators.",
   "main": "index.js",
   "scripts": {
-    "test": "eslint . && flow check && jest",
-    "update": "npm-check --update --save-exact"
+    "test": "eslint . && tsc --noEmit && jest",
+    "update": "npm-check --update --save-exact",
+    "prepublishOnly": "tsc"
   },
   "keywords": [
     "parser",
@@ -17,30 +18,38 @@
   "license": "MIT",
   "devDependencies": {
     "@appliedblockchain/eslint-config": "2.6.0",
-    "eslint": "7.0.0",
-    "flow-bin": "0.125.1",
-    "jest": "26.0.1",
-    "npm-check": "5.9.2"
+    "@tsconfig/node12": "1.0.7",
+    "@types/jest": "26.0.13",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
+    "eslint": "7.8.1",
+    "eslint-plugin-jest": "23.20.0",
+    "jest": "26.4.2",
+    "npm-check": "5.9.2",
+    "ts-jest": "26.3.0",
+    "typescript": "4.0.2"
   },
   "eslintConfig": {
-    "extends": "@appliedblockchain",
-    "rules": {
-      "no-empty": 0,
-      "no-param-reassign": [
-        2,
-        {
-          "props": true
-        }
-      ]
-    }
+    "root": true,
+    "parser": "@typescript-eslint/parser",
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "extends": [
+      "plugin:@typescript-eslint/recommended",
+      "@appliedblockchain"
+    ]
   },
   "eslintIgnore": [
-    "flow-typed/*",
-    "wip/*"
+    "wip/*",
+    "*.js"
   ],
   "jest": {
-    "modulePathIgnorePatterns": [
-      "<rootDir>/wip"
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/wip/"
     ]
   }
 }
