--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,6 @@
 {
   "files.exclude": {
-    "*.js": true,
-    "helpers/*.js": true
+    "**/*.js": true
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true
