--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "@appliedblockchain/eslint-config": "2.6.0",
     "@tsconfig/node12": "1.0.7",
     "@types/jest": "26.0.14",
-    "@typescript-eslint/eslint-plugin": "4.2.0",
-    "@typescript-eslint/parser": "4.2.0",
+    "@typescript-eslint/eslint-plugin": "4.3.0",
+    "@typescript-eslint/parser": "4.3.0",
     "eslint": "7.10.0",
     "eslint-plugin-jest": "24.0.2",
     "jest": "26.4.2",
@@ -47,6 +47,9 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
+    "testMatch": [
+      "<rootDir>/**/?(*.)test.ts"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/wip/"
