--- a/package.json
+++ b/package.json
@@ -19,26 +19,36 @@
   "devDependencies": {
     "@appliedblockchain/eslint-config": "2.6.0",
     "@tsconfig/node12": "1.0.7",
-    "@types/jest": "26.0.14",
-    "@typescript-eslint/eslint-plugin": "4.3.0",
-    "@typescript-eslint/parser": "4.3.0",
-    "eslint": "7.10.0",
-    "eslint-plugin-jest": "24.0.2",
-    "jest": "26.4.2",
+    "@types/jest": "26.0.20",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
+    "eslint": "7.18.0",
+    "eslint-plugin-jest": "24.1.3",
+    "jest": "26.6.3",
     "npm-check": "5.9.2",
-    "ts-jest": "26.4.0",
-    "typescript": "4.0.3"
+    "ts-jest": "26.4.4",
+    "typescript": "4.0.5"
   },
   "eslintConfig": {
     "root": true,
     "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
     "extends": [
       "plugin:@typescript-eslint/recommended",
       "@appliedblockchain"
-    ]
+    ],
+    "plugins": [
+      "@typescript-eslint"
+    ],
+    "rules": {
+      "no-param-reassign": [
+        "error",
+        {
+          "props": true
+        }
+      ],
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": "error"
+    }
   },
   "eslintIgnore": [
     "wip/*",
