--- a/package.json
+++ b/package.json
@@ -2,11 +2,23 @@
   "name": "@appliedblockchain/parser-combinators",
   "version": "4.2.0",
   "description": "Monadic parser combinators.",
-  "main": "index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "bundler": "./index.ts",
+      "require": "./cjs/index.js",
+      "default": "./esm/index.js"
+    },
+    "./*": {
+      "bundler": "./*.ts",
+      "require": "./cjs/*.js",
+      "default": "./esm/*.js"
+    }
+  },
   "scripts": {
-    "test": "eslint . && tsc --noEmit && jest",
+    "test": "eslint . && tsc && jest",
     "update": "npm-check --update --save-exact",
-    "prepublishOnly": "tsc"
+    "prepack": "tsc && tsc -p tsconfig.cjs.json"
   },
   "keywords": [
     "parser",
@@ -18,16 +30,16 @@
   "license": "MIT",
   "devDependencies": {
     "@appliedblockchain/eslint-config": "2.6.0",
-    "@tsconfig/node14": "1.0.1",
-    "@types/jest": "26.0.20",
-    "@typescript-eslint/eslint-plugin": "4.14.0",
-    "@typescript-eslint/parser": "4.14.0",
+    "@tsconfig/node18": "1.0.1",
+    "@types/jest": "29.5.0",
+    "@typescript-eslint/eslint-plugin": "5.58.0",
+    "@typescript-eslint/parser": "5.58.0",
     "eslint": "7.18.0",
-    "eslint-plugin-jest": "24.1.3",
-    "jest": "26.6.3",
-    "npm-check": "5.9.2",
-    "ts-jest": "26.4.4",
-    "typescript": "4.0.5"
+    "eslint-plugin-jest": "27.2.1",
+    "jest": "29.5.0",
+    "npm-check": "6.0.1",
+    "ts-jest": "29.1.0",
+    "typescript": "5.0.4"
   },
   "eslintConfig": {
     "root": true,
@@ -58,7 +70,7 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
-      "<rootDir>/**/?(*.)test.ts"
+      "<rootDir>/esm/**/*.test.js"
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
