--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     }
   },
   "scripts": {
-    "test": "eslint . && tsc && jest",
+    "test": "eslint . && tsc && NODE_OPTIONS=--experimental-vm-modules jest",
     "update": "npm-check --update --save-exact",
     "prepack": "tsc && tsc -p tsconfig.cjs.json"
   },
@@ -38,7 +38,6 @@
     "eslint-plugin-jest": "27.2.1",
     "jest": "29.5.0",
     "npm-check": "6.0.1",
-    "ts-jest": "29.1.0",
     "typescript": "5.0.4"
   },
   "eslintConfig": {
@@ -67,7 +66,6 @@
     "*.js"
   ],
   "jest": {
-    "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
       "<rootDir>/esm/**/*.test.js"
